# tidepool

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  compatibility.toml  docker-compose.yml  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json
.cargo/: config.toml
.github/workflows/: ci.yml  helius-drift.yml  node-prebuild.yml  release.yml
announcements/: v0.1.5.md  v0.2.0.md  v0.3.0.md  v0.4.0.md
contracts/: README.md  cases.toml
contracts/fixtures/getAllWebhooks/: getAllWebhooks_empty_project.json
contracts/fixtures/getAsset/: getAsset_invalid_id_returns_error.json  getAsset_known_cnft.json  getAsset_mad_lads_1337.json  getAsset_nonexistent_mint.json
contracts/fixtures/getAssetBatch/: getAssetBatch_two_real_two_missing.json
contracts/fixtures/getAssetProof/: getAssetProof_known_cnft.json
contracts/fixtures/getAssetsByAuthority/: getAssetsByAuthority_small_set.json
contracts/fixtures/getAssetsByCreator/: getAssetsByCreator_verified_only.json
contracts/fixtures/getAssetsByGroup/: getAssetsByGroup_mad_lads_collection.json
contracts/fixtures/getBalances/: getBalances_small_wallet.json
contracts/fixtures/getNftEditions/: getNftEditions_no_editions.json
contracts/fixtures/getPriorityFeeEstimate/: getPriorityFeeEstimate_all_levels.json
contracts/fixtures/getSlot/: getSlot_current.json
contracts/fixtures/getTokenAccounts/: getTokenAccounts_by_owner.json
contracts/fixtures/getTransactions/: getTransactions_single_sig.json
contracts/fixtures/getTransactionsByAddress/: getTransactionsByAddress_small_wallet.json
contracts/fixtures/searchAssets/: searchAssets_by_collection.json
contracts/schemas/getAllWebhooks/: getAllWebhooks_empty_project.schema.json
contracts/schemas/getAsset/: getAsset_invalid_id_returns_error.schema.json  getAsset_known_cnft.schema.json  getAsset_mad_lads_1337.schema.json  getAsset_nonexistent_mint.schema.json
contracts/schemas/getAssetBatch/: getAssetBatch_two_real_two_missing.schema.json
contracts/schemas/getAssetProof/: getAssetProof_known_cnft.schema.json
contracts/schemas/getAssetsByAuthority/: getAssetsByAuthority_small_set.schema.json
contracts/schemas/getAssetsByCreator/: getAssetsByCreator_verified_only.schema.json
contracts/schemas/getAssetsByGroup/: getAssetsByGroup_mad_lads_collection.schema.json
contracts/schemas/getAssetsByOwner/: getAssetsByOwner_small_wallet.schema.json
contracts/schemas/getBalances/: getBalances_small_wallet.schema.json
contracts/schemas/getNftEditions/: getNftEditions_no_editions.schema.json
contracts/schemas/getPriorityFeeEstimate/: getPriorityFeeEstimate_all_levels.schema.json
contracts/schemas/getSlot/: getSlot_current.schema.json
contracts/schemas/getTokenAccounts/: getTokenAccounts_by_owner.schema.json
contracts/schemas/getTransactions/: getTransactions_single_sig.schema.json
contracts/schemas/getTransactionsByAddress/: getTransactionsByAddress_small_wallet.schema.json
contracts/schemas/searchAssets/: searchAssets_by_collection.schema.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: binary.rs
crates/core/: Cargo.toml
crates/core/src/: hash.rs  lib.rs  proof.rs  types.rs
crates/core/tests/: hash.rs  proof.rs
crates/node/: .gitignore  Cargo.toml  build.rs  index.d.ts  index.js  package.json  pnpm-lock.yaml
crates/node/__test__/: smoke.test.mjs
crates/node/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  dispatcher.rs  http.rs  json_rpc.rs  lib.rs  rest.rs  upstream_http.rs  webhook_runtime.rs  ws.rs
crates/server/tests/: integration.rs  ws.rs
crates/service/: Cargo.toml  compatibility.toml
crates/service/src/: cache.rs  compat.rs  compatibility.rs  lib.rs  priority_fee.rs  sqlite_backend.rs  sqlite_cache.rs  sqlite_schema.sql  upstream.rs
crates/service/src/cnft/: apply.rs  indexer.rs  leaf_event.rs  mod.rs  parser.rs  snapshot.rs  sqlite_store.rs  store.rs  tx_extract.rs  types.rs
crates/service/src/das/: cnft_to_das.rs  decoder.rs  fetch.rs  handlers.rs  mod.rs  mpl_core_decoder.rs  offchain.rs  token_metadata_decoder.rs  types.rs
crates/service/src/enhanced/: classify.rs  enrich.rs  events.rs  fetch.rs  mod.rs  parse.rs  transfers.rs  transfers_history.rs  types.rs
crates/service/src/webhooks/: delivery.rs  mod.rs  registry.rs  sqlite_registry.rs  types.rs
crates/service/tests/: apply.rs  cache.rs  contracts.rs  das.rs  fetch.rs  indexer.rs  leaf_event.rs  mpl_core_decoder.rs  parser.rs  sqlite_concurrency.rs  store.rs  token_metadata_decoder.rs  tx_extract.rs  upstream.rs  webhooks.rs
examples/: README.md
examples/mint-and-query/: README.md  index.ts  package.json  pnpm-lock.yaml  tsconfig.json
examples/msw-integration/: README.md  example.test.ts  package.json  pnpm-lock.yaml  setup.ts  vitest.config.ts
examples/rust-integration/: Cargo.toml  README.md
examples/rust-integration/src/: main.rs
idls/: bubblegum.source.json  mpl_core.source.json  spl_account_compression.source.json  token_metadata.source.json
scripts/: bump-version.sh  codama.ts  lib.sh  preflight.sh  verify-changelog.sh  verify-upstream-pins.sh  verify-version-sync.sh
src/: bin.ts  context.ts  core.ts  fixtures.ts  index.ts  proxy.ts  router.ts  upstream.ts
src/cache/: index.ts  memory.ts  store.ts
src/cnft/: apply.ts  hash.ts  index.ts  indexer.ts  leaf-event.ts  parser.ts  proof.ts  store-memory.ts  store.ts  tx-extract.ts  types.ts
src/compat/: index-tree.ts  index.ts  info.ts  manifest.ts
src/decoders/: index.ts  mpl-core-plugins.ts  mpl-core.ts  token-metadata.ts
src/namespaces/: index.ts
src/namespaces/das/: cnft-to-das.ts  fetch.ts  get-asset-batch.ts  get-asset-proof.ts  (+11 more)
src/server/: http.ts  index.ts  logging.ts  ws.ts
test/cnft/: apply.test.ts  handlers.test.ts  hash.test.ts  indexer.test.ts  leaf-event.test.ts  parser.test.ts  proof.test.ts  store.test.ts  tx-extract.test.ts
test/compat/: core.test.ts  msw.test.ts  nock.test.ts  undici.test.ts
xtask/: Cargo.toml
xtask/src/: check_drift.rs  main.rs  record.rs  schemas.rs
(+8 files in other folders)
